attempt to fix ios overflow issue

--- a/App/scss/_buttonContainer.scss
+++ b/App/scss/_buttonContainer.scss
@@ -4,7 +4,7 @@
   max-height: 430px;
   display: grid;
   grid-gap: 0.8rem;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: repeat(4, 1fr);
   background-color: var(--veryDarkDesaturatedBlueScreen);
   border-radius: 10px;
   margin-top: 2.3rem;
